# CDS-390-Project2-Code-Grading-Tool

./: .gitignore  CMakeLists.txt  Project Summary.txt  README.md  README.txt  main.cpp
plugins/grader/: CMakeLists.txt
plugins/grader/include/: grader.hpp
plugins/grader/src/: grader.cpp
src/: CMakeLists.txt  main.cpp
src/adapters/authenticator/: CMakeLists.txt  authenticator.cpp  authenticator.hpp
src/adapters/database/: db_adapter.cpp  db_adapter.hpp
src/console_interface/: CMakeLists.txt  console_ui.cpp  console_ui.hpp
src/create_delete_assignment/controllers/: CMakeLists.txt  assignment_controller.cpp  assignment_controller.hpp
src/create_delete_assignment/interactors/create_assignment/: CMakeLists.txt  create_assignment.cpp  presenter_interface.hpp
src/create_delete_assignment/interactors/delete_assignment/: delete_assignment.cpp
src/create_delete_assignment/presenters/create_assignment/: CMakeLists.txt  create_assignment_presenter.cpp  create_assignment_presenter.hpp  view_interface.hpp
src/create_delete_assignment/presenters/delete_assignment/: CMakeLists.txt  delete_assignment_presenter.hpp  view_interface.hpp  view_model.hpp
src/create_delete_assignment/request_response_models/: create_assignment_models.hpp  delete_assignment_models.hpp
src/create_delete_assignment/views/create_assignment/: create_assignment_view.cpp  create_assignment_view.hpp
src/create_delete_assignment/views/delete_assignment/: delete_assignment_view.hpp
src/create_delete_user/: CMakeLists.txt
src/create_delete_user/controllers/: CMakeLists.txt  user_controller.hpp
src/create_delete_user/interactors/create_user/: CMakeLists.txt  create_user.cpp  create_user.hpp  presenter_interface.hpp
src/create_delete_user/interactors/delete_user/: delete_user.cpp
src/create_delete_user/presenters/create_user/: create_user_presenter.cpp  create_user_presenter.hpp  view_interface.hpp
src/create_delete_user/presenters/delete_user/: delete_user_presenter.hpp  view_model.hpp
src/create_delete_user/request_response_models/: delete_user_models.hpp
src/create_delete_user/views/create_user/: CMakeLists.txt  create_user_view.hpp
src/create_delete_user/views/delete_user/: delete_user_view.cpp  delete_user_view.hpp
src/entities/: CMakeLists.txt
src/entities/assignment/: assignment.cpp  assignment.h  assignment.hpp
src/entities/submission/: submission.cpp  submission.h  submission.hpp
src/entities/user/: user.cpp  user.h  user.hpp
src/grade_report/controllers/: CMakeLists.txt  report_controller.cpp  report_controller.hpp
src/grade_report/interactors/instructor/: instructor_report.hpp  presenter_interface.hpp
src/grade_report/interactors/student/: presenter_interface.hpp  student_report.cpp  student_report.hpp
src/grade_report/presenters/instructor/: CMakeLists.txt  instructor_report_presenter.cpp  instructor_report_presenter.hpp
src/grade_report/presenters/student/: student_report_presenter.hpp
src/grade_report/request_response_models/: instructor_report_models.hpp  student_report_models.hpp  student_report_struct.hpp
src/grade_report/views/instructor/: CMakeLists.txt
src/interfaces/: abstract_UI.hpp  abstract_authenticator.hpp  abstract_database.hpp  abstract_grader.hpp  abstract_view.hpp
src/log_in_out/: CMakeLists.txt
src/log_in_out/controllers/: CMakeLists.txt  log_in_out_controller.cpp  log_in_out_controller.hpp
src/log_in_out/controllers/log_in_controller/: log_in_controller.hpp
src/log_in_out/interactors/log_in/: log_in.cpp  log_in.hpp  presenter_interface.hpp
src/log_in_out/interactors/log_out/: log_out.cpp  log_out.hpp  presenter_interface.hpp
src/log_in_out/presenters/log_in/: CMakeLists.txt  login_presenter.cpp  login_presenter.hpp
src/log_in_out/presenters/log_out/: CMakeLists.txt  logout_presenter.cpp  logout_presenter.hpp  view_interface.hpp
src/log_in_out/request_response_models/: login_models.hpp  logout_models.hpp
src/log_in_out/views/log_in/: login_view.hpp
src/log_in_out/views/log_out/: CMakeLists.txt
src/plugin_glue/authenticator/: authenticator.cpp
src/plugin_glue/database/: CMakeLists.txt  database.cpp  database.hpp  db_adapter.cpp  db_adapter.hpp
src/plugin_glue/grader/: CMakeLists.txt  grader.cpp  grader.hpp
src/plugins/grader/: CMakeLists.txt
src/plugins/grader/include/: grader.hpp
src/plugins/grader/src/: grader.cpp
src/submit_assignment/controllers/: CMakeLists.txt  submission_controller.cpp  submission_controller.hpp
src/submit_assignment/interactors/: CMakeLists.txt  presenter_interface.hpp  submit_assignment.cpp  submit_assignment.hpp
src/submit_assignment/presenters/: CMakeLists.txt  submission_presenter.cpp  submission_presenter.hpp  view_model.hpp
src/submit_assignment/request_response_models/: submission_models.hpp
src/submit_assignment/submit_assignment/: CMakeLists.txt  submit_assignment.cpp  submit_assignment.hpp
src/submit_assignment/views/: CMakeLists.txt  view.cpp  view.hpp
src/use_case_groups/create_delete_assignment/: CMakeLists.txt
src/use_case_groups/create_delete_assignment/controllers/: assignment_controller.cpp  assignment_controller.hpp  input_request_models.hpp
src/use_case_groups/create_delete_assignment/request_response_models/: create_assignment_models.hpp  delete_assignment_models.hpp
src/use_case_groups/create_delete_user/: CMakeLists.txt
src/use_case_groups/create_delete_user/controllers/: input_request_models.hpp  user_controller.cpp  user_controller.hpp
src/use_case_groups/create_delete_user/request_response_models/: change_password_models.hpp  create_user_models.hpp  delete_user_models.hpp
src/use_case_groups/grade_report/: CMakeLists.txt
src/use_case_groups/grade_report/controllers/: input_request_models.hpp  report_controller.cpp  report_controller.hpp
src/use_case_groups/grade_report/request_response_models/: student_report_models.hpp  (+1 more)
src/use_case_groups/submit_assignment/: CMakeLists.txt
src/use_case_groups/view_assignments/: CMakeLists.txt
test/: CMakeLists.txt  authentication_test.cpp  grader_tests.cpp  other_tests.cpp  user_test.cpp
(+120 files in other folders)
